--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #f9fafb;
+  background: #1a1d29;
+  color: #e4e6eb;
 }
 
 main {
