--- a/src/screens/Dashboard.css
+++ b/src/screens/Dashboard.css
@@ -141,7 +141,7 @@
 .project-name {
   font-size: 15px;
   font-weight: 600;
-  color: #e4e6eb;
+  color: #1f2937 !important;
   margin: 0;
   line-height: 1.4;
 }
